--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
     "prop-types": "^15.6.0",
     "raf": "3.4.0",
     "react": "^16.2.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
-    "react-hot-loader": "^3.1.3",
+    "react-hot-loader": "^4.0.0",
     "react-player": "^1.1.3",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
